{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 19,
  "lineage": "ed46553b-4e28-5468-28d3-f4c62f3e504f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03066f657b18d57d2",
            "domain": "vpc",
            "id": "eipalloc-03066f657b18d57d2",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-19-220-4.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.220.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:internet-gateway/igw-07d53745f32405171",
            "id": "igw-07d53745f32405171",
            "owner_id": "891377015455",
            "tags": {
              "Name": "app1_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03066f657b18d57d2",
            "connectivity_type": "public",
            "id": "nat-0d10220c5a4fa3496",
            "network_interface_id": "eni-0d152b364da9b731e",
            "private_ip": "10.32.1.218",
            "public_ip": "52.19.220.4",
            "subnet_id": "subnet-000dd5e1d4fa0a18c",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:route-table/rtb-087f876d64370662a",
            "id": "rtb-087f876d64370662a",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d10220c5a4fa3496",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:route-table/rtb-0bf77fbf55ef72029",
            "id": "rtb-0bf77fbf55ef72029",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d53745f32405171",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039e400ded7819d8b",
            "route_table_id": "rtb-087f876d64370662a",
            "subnet_id": "subnet-0f1488cdcc17d169e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-1a",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d52d75aae5e58dba",
            "route_table_id": "rtb-087f876d64370662a",
            "subnet_id": "subnet-03f4bb73b6b2e8d21"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-1b",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b1f504e7cb77b1d",
            "route_table_id": "rtb-087f876d64370662a",
            "subnet_id": "subnet-0831b144359a17820"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-1c",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043adac4e5af619b5",
            "route_table_id": "rtb-0bf77fbf55ef72029",
            "subnet_id": "subnet-000dd5e1d4fa0a18c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f9aa37924e1644f",
            "route_table_id": "rtb-0bf77fbf55ef72029",
            "subnet_id": "subnet-0d2e088259a19bd31"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-1b",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025352de3a920a57a",
            "route_table_id": "rtb-0bf77fbf55ef72029",
            "subnet_id": "subnet-0e64c844ebf0b0304"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-1c",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:subnet/subnet-0f1488cdcc17d169e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.32.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1488cdcc17d169e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:subnet/subnet-03f4bb73b6b2e8d21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.32.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f4bb73b6b2e8d21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:subnet/subnet-0831b144359a17820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.32.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0831b144359a17820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:subnet/subnet-000dd5e1d4fa0a18c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000dd5e1d4fa0a18c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:subnet/subnet-0d2e088259a19bd31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2e088259a19bd31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:subnet/subnet-0e64c844ebf0b0304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e64c844ebf0b0304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-00b9e9c31ad32be5a"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377015455:vpc/vpc-00b9e9c31ad32be5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-0e3690c54c66d43d4",
            "default_route_table_id": "rtb-07db2bdced6429afb",
            "default_security_group_id": "sg-0fda424dbf609d032",
            "dhcp_options_id": "dopt-01c5bd0c6e527e1da",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00b9e9c31ad32be5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07db2bdced6429afb",
            "owner_id": "891377015455",
            "tags": {
              "Name": "app1",
              "Owner": "Chewbacca",
              "Planet": "Mustafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1",
              "Owner": "Chewbacca",
              "Planet": "Mustafar",
              "Service": "application1"
            }
          }
        }
      ]
    }
  ]
}